feat(observability): set-up jaeger

--- a/11-open-telemetry/docker-compose.yaml
+++ b/11-open-telemetry/docker-compose.yaml
@@ -57,6 +57,14 @@ services:
       - ./configs/grafana:/etc/grafana/provisioning/datasources
       - ./data/grafana:/var/lib/grafana
 
+  jaeger:
+    image: jaegertracing/all-in-one
+    restart: unless-stopped
+    ports:
+      - "4318:4318"
+      - "16686:16686"
+    networks: [ todos ]
+
 networks:
   todos:
     driver: bridge
