--- a/11-open-telemetry/configs/grafana/datasources.yaml
+++ b/11-open-telemetry/configs/grafana/datasources.yaml
@@ -12,3 +12,8 @@ datasources:
     url: http://jaeger:16686
     access: proxy
     editable: true
+  - name: Loki
+    type: loki
+    url: http://loki:3100
+    access: proxy
+    editable: true
