--- a/11-open-telemetry/docker-compose.yaml
+++ b/11-open-telemetry/docker-compose.yaml
@@ -12,6 +12,11 @@ services:
     environment:
       DATABASE_URL: "postgres://postgres:postgres@postgres:5432/todos"
       PORT: 8080
+    logging:
+      driver: loki
+      options:
+        loki-url: http://localhost:3100/loki/api/v1/push
+        loki-external-labels: container_name={{ .Name }},app=todos-api
     ports:
       - "8080:8080"
     networks: [ todos ]
@@ -35,8 +40,7 @@ services:
   prometheus:
     image: prom/prometheus
     restart: unless-stopped
-    command:
-      - "--config.file=/etc/prometheus/prometheus.yaml"
+    command: --config.file=/etc/prometheus/prometheus.yaml
     ports:
       - "9090:9090"
     networks: [ todos ]
@@ -64,6 +68,17 @@ services:
       - "4318:4318"
       - "16686:16686"
     networks: [ todos ]
+
+  loki:
+    image: grafana/loki
+    restart: unless-stopped
+    ports:
+      - "3100:3100"
+    networks: [ todos ]
+    volumes:
+      - ./configs/loki:/etc/loki
+      - ./data/loki:/tmp/loki
+    command: --config.file=/etc/loki/config.yaml
 
 networks:
   todos:
